# mselph264

./: AUTHORS  CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt
src/camera/: CMakeLists.txt  elp-camera.rules
src/camera/include/h264camera/: elp_usb100w04h.hpp  types.hpp  v4l2_device.hpp
src/camera/src/: data_helper.hpp  elp_usb100w04h.cpp  v4l2_device.cpp
src/camera/test/: capture_tester.cpp  elp_usb100w04h.cpp  main.cpp  tc_elp_usb100w04h.cpp  tc_v4l2_device.cpp
src/plugin/: CMakeLists.txt
src/plugin/src/: cam.cpp  filter.cpp  filter.hpp  h264helper.cpp  h264helper.hpp  mselph264.cpp  utils.hpp
src/plugin/test/: helper.cpp  helper.hpp  main.cpp  tc_plugin.cpp
tools/: CMakeLists.txt  local_rtp.cpp
